version/0.30/_sources/api/solver/_autosummary/settings/network_end_2_child.rst.txt
:orphan:

.. _network_end_2_child:

network_end_child
=================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.network_end_2_child
    :show-inheritance:

.. rubric:: Attributes

=============================   ======================================

Attribute                                                      Summary

=============================   ======================================
:ref:`name <name_2>`                               Name of the object.

:ref:`location <location_2>`                      Input location name.

:ref:`settings <settings_15>`       Domain name to define settings on.

=============================   ======================================

.. rubric:: Methods

======================   ===============================================

Method                                                           Summary

======================   ===============================================
:ref:`split <split_1>`       Input boundary and location names to split.

======================   ===============================================

.. rubric:: Included in:

====================================   ================

Parent                                          Summary

====================================   ================
:ref:`network_end_2 <network_end_2>`       Thread-type.

====================================   ================

